<resources>
    <string name="app_name">TrackMyTag</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="new_devices_data">Name: %1$s\nAddress: %2$s</string>
    <string name="scanning_started">Scanning has been started</string>
    <string name="scanning_finished">Scanning has finished</string>
    <string name="no_ble">No BLE</string>
    <string name="no_ble_support">Sorry, this device does not support Bluetooth Low Energy technology!</string>
    <string name="choose_device">Choose device</string>
    <string name="no_devices_found">No devices found!</string>
    <string name="name_device">Name your device</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_device">Add device</string>
    <string name="settings">Settings</string>
    <string name="scanning_time">Scanning time</string>
    <string name="scanning">Scanning</string>
    <string name="two_seconds">2 secnods</string>
    <string name="five_seconds">5 seconds</string>
    <string name="ten_seconds">10 seconds</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="enable_bluetooth_question">Do you want to enable Bluetooth?</string>
    <string name="scanning_error">Scanning error</string>
    <string name="scanning_error_message">Scanning process could not be finished. Error code: %1$d</string>
    <string name="delete_device">Delete device</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_description">Please enable required permissions in the app settings!</string>
    <string name="delete_device_alert">Are you sure you want to delete this device?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alarm">Alarm</string>
    <string name="connect">Connect</string>
    <string name="battery_level">Battery level: %1$d%%</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnect">Disconnect</string>
    <string name="signal_strength">Signal strength: %1$d</string>
    <string name="device_name">Device name</string>
    <string name="color">Color</string>
    <string name="choose_color">Choose color</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ringtone">Ringtone</string>
    <string name="choose_ringtone">Choose ringtone</string>

</resources>