<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="device"
            type="com.ks.trackmytag.data.Device" />
        <variable
            name="deviceStates"
            type="com.ks.trackmytag.ui.adapters.DeviceStates" />
        <variable
            name="clickListener"
            type="com.ks.trackmytag.ui.adapters.DeviceClickListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/margin_large">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{device.name}"
                tools:text="Device one"
                android:textSize="@dimen/large_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/battery_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="83"
                android:text="@{deviceStates.batteryStates.get(device.address).toString()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"/>

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_delete"
                android:src="@drawable/icon_delete"
                android:contentDescription="@string/delete_device"
                android:onClick="@{() -> clickListener.onDeleteClick(device)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/connection_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                setButtonText="@{deviceStates.connectionStates.get(device.address)}"
                setButtonColor="@{deviceStates.connectionStates.get(device.address)}"
                android:onClick="@{() -> clickListener.onConnectClick(device)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/settings_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/alarm_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/alarm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>